--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Bounty Dapp"
+      name="Chained Bounties"
       content="A decentralized bounty application"
     />
 
-    <title>Dappy Bounty</title>
+    <title>Chained Bounties</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
